# mymentalhealthapp

./: .gitignore  README.md  api.py  auth.py  config.py  create_icons.py  db_init.py  docker-compose.yml  embed_test.py  migrate_add_milestone.py  migrate_add_users.py  migrate_vectors.py  mindactions_backup.sql  populator.py  processor.py  processor_gemini.py  prompt_template.txt  pyproject.toml  requirements.txt  search_engine.py  search_test.py  seed_data.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ActionCard.jsx  SearchBar.jsx  VideoModal.jsx
